--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "homepage": "https://github.com/mckenziearts/laravel-notify",
   "keywords": ["Laravel", "laravel-notify", "notification"],
   "require": {
-    "php": ">=^8.0.2",
+    "php": ">=8.0.2",
     "illuminate/support": "~7.0|~8.0|~9.0"
   },
   "require-dev": {
